# fastapi-celery-demo

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  rebuild-api.sh
docs/: Requirements.md
scripts/: create_task.sh  get_task.sh  start_api.sh  start_flower.sh  start_redis.sh  start_worker.sh
src/: api.py  config.py  logging_config.py  models.py  tasks.py  worker.py
src/static/: index.js
src/task_defs/: __init__.py  calculation_task.py  sleep_task.py
src/templates/: index.html
